// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroCover HeroImage should handle on scroll events 1`] = `
<HeroImage
  image={
    Object {
      "src": "src",
    }
  }
>
  <div
    className="hero_image"
    style={
      Object {
        "transform": "translate3d(0px, 10px, 0px)",
      }
    }
  >
    <Image
      Tag="div"
      alt=""
      fadeIn={true}
      sizes={
        Object {
          "src": "src",
        }
      }
      style={
        Object {
          "height": "100%",
          "left": 0,
          "margin": "0",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <div
        className=" gatsby-image-outer-wrapper"
        style={
          Object {
            "position": "initial",
          }
        }
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "margin": "0",
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": "NaN%",
                "width": "100%",
              }
            }
          />
          <Img
            alt=""
            onLoad={[Function]}
            src="src"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <img
              alt=""
              onLoad={[Function]}
              src="src"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 0.5s",
                  "width": "100%",
                }
              }
            />
          </Img>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<img width=\\"\\" height=\\"\\" src=\\"src\\" srcset=\\"undefined\\" alt=\\"\\" title=\\"\\" sizes=\\"\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/>",
              }
            }
          />
        </div>
      </div>
    </Image>
    <div
      className="hero_image__shadow"
    />
  </div>
</HeroImage>
`;

exports[`HeroCover HeroImage should handle on scroll events 2`] = `
<HeroImage
  image={
    Object {
      "src": "src",
    }
  }
>
  <div
    className="hero_image"
    style={
      Object {
        "transform": "translate3d(0px, 0px, 0px)",
      }
    }
  >
    <Image
      Tag="div"
      alt=""
      fadeIn={true}
      sizes={
        Object {
          "src": "src",
        }
      }
      style={
        Object {
          "height": "100%",
          "left": 0,
          "margin": "0",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <div
        className=" gatsby-image-outer-wrapper"
        style={
          Object {
            "position": "initial",
          }
        }
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "margin": "0",
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": "NaN%",
                "width": "100%",
              }
            }
          />
          <Img
            alt=""
            onLoad={[Function]}
            src="src"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <img
              alt=""
              onLoad={[Function]}
              src="src"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 0.5s",
                  "width": "100%",
                }
              }
            />
          </Img>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<img width=\\"\\" height=\\"\\" src=\\"src\\" srcset=\\"undefined\\" alt=\\"\\" title=\\"\\" sizes=\\"\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/>",
              }
            }
          />
        </div>
      </div>
    </Image>
    <div
      className="hero_image__shadow"
    />
  </div>
</HeroImage>
`;

exports[`HeroCover HeroImage should render a HeroImage 1`] = `
<HeroImage
  image={
    Object {
      "src": "src",
    }
  }
>
  <div
    className="hero_image"
    style={
      Object {
        "transform": "translate3d(0px, 0px, 0px)",
      }
    }
  >
    <Image
      Tag="div"
      alt=""
      fadeIn={true}
      sizes={
        Object {
          "src": "src",
        }
      }
      style={
        Object {
          "height": "100%",
          "left": 0,
          "margin": "0",
          "position": "absolute",
          "top": 0,
          "width": "100%",
        }
      }
    >
      <div
        className=" gatsby-image-outer-wrapper"
        style={
          Object {
            "position": "initial",
          }
        }
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "margin": "0",
              "overflow": "hidden",
              "position": "absolute",
              "top": 0,
              "width": "100%",
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": "NaN%",
                "width": "100%",
              }
            }
          />
          <Img
            alt=""
            onLoad={[Function]}
            src="src"
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <img
              alt=""
              onLoad={[Function]}
              src="src"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 0.5s",
                  "width": "100%",
                }
              }
            />
          </Img>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<img width=\\"\\" height=\\"\\" src=\\"src\\" srcset=\\"undefined\\" alt=\\"\\" title=\\"\\" sizes=\\"\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/>",
              }
            }
          />
        </div>
      </div>
    </Image>
    <div
      className="hero_image__shadow"
    />
  </div>
</HeroImage>
`;
